force-app/main/default/objects/Lead/fields/Are_you_on_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Are_you_on_Facebook__c</fullName>
    <label>Are you on Facebook?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>