force-app/main/default/objects/Lead/fields/How_did_you_hear_of_the_event__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_of_the_event__c</fullName>
    <label>How did you hear of the event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Burrus Seed representative</fullName>
            </value>
            <value>
                <fullName>Social media post</fullName>
            </value>
            <value>
                <fullName>Fellow soybean grower</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>