force-app/main/default/objects/Lead/fields/how_many_soybean_acres_per_year__c.field-meta.xml
<CustomField>
    <fullName>how_many_soybean_acres_per_year__c</fullName>
    <label>how many soybean acres per year?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>