force-app/main/default/objects/Lead/fields/What_soybean_brands_varieties_do_you_pla__c.field-meta.xml
<CustomField>
    <fullName>What_soybean_brands_varieties_do_you_pla__c</fullName>
    <label>What soybean brands/varieties do you pla</label>
    <length>80</length>
    <type>Text</type>
</CustomField>